--- a/test.html
+++ b/test.html
@@ -1,8 +1,8 @@
 !DOCTYPE html
 html
-body
-  h1ค่าปัจจุบันh1
-  pอุณหภูมิ {{temp}}p
-  pความชื้น {{hum}}p
-body
-html
+<body>
+  <h1>ค่าปัจจุบัน</h1>
+  <p>อุณหภูมิ {{temp}}</p>
+  <p>ความชื้น {{hum}}</p>
+</body>
+</html>
