--- a/test.html
+++ b/test.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="th">
 <body>
-  <h1>ค่าปัจจุบัน</h1>
-  <p>อุณหภูมิ {{temp}}</p>
-  <p>ความชื้น {{hum}}</p>
+  <h1>Current Value</h1>
+  <p>Temp: {{temp}}</p>
+  <p>Hum {{hum}}</p>
 </body>
 </html>
