--- a/test.html
+++ b/test.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="th">
+<head>
+  <meta charset="UTF-8" />
+</head>
 <body>
   <h1>Current Value</h1>
   <p>Temp: {{temp}}</p>
   <p>Hum {{hum}}</p>
 </body>
 </html>
+
