Translate HTML content to Thai language

--- a/test.html
+++ b/test.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8" />
 </head>
-<body>
-  <h1>Current Value</h1>
-  <p>Temp: {{temp}}</p>
-  <p>Hum {{hum}}</p>
+<body>  
+  <h1>ค่าปัจจุบัน</h1>
+  <p>อุณหภูมิ {{temp}}</p>
+  <p>ความชื้น {{hum}}</p>
 </body>
 </html>
+
 
