--- a/test.html
+++ b/test.html
@@ -5,9 +5,10 @@
 </head>
 <body>  
   <h1>ค่าปัจจุบัน</h1>
-  <p>อุณหภูมิ {{temp}}</p>
+  <h2>อุณหภูมิ {{temp}}</h2>
   <p>ความชื้น {{hum}}</p>
 </body>
 </html>
+
 
 
