--- a/test.html
+++ b/test.html
@@ -4,11 +4,12 @@
   <meta charset="UTF-8" />
 </head>
 <body>  
-  <h1>ค่าปัจจุบัน</h1>
+  <div>ค่าปัจจุบัน</div>
   <h2>อุณหภูมิ {{temp}}</h2>
   <p>ความชื้น {{hum}}</p>
 </body>
 </html>
+
 
 
 
