Add humidity display to test.html
Added a new div element to display humidity.

--- a/test.html
+++ b/test.html
@@ -6,9 +6,10 @@
 <body>  
   <div>ค่าปัจจุบัน</div>
   <h2>อุณหภูมิ {{temp}}</h2>
-  <p>ความชื้น {{hum}}</p>
+  <div>ความชื้น {{hum}}</div>
 </body>
 </html>
+
 
 
 
