--- a/test.html
+++ b/test.html
@@ -4,11 +4,12 @@
   <meta charset="UTF-8" />
 </head>
 <body>  
-  <div>ค่าปัจจุบัน</div>
+  <h3>ค่าปัจจุบัน</h3>
   <h2>อุณหภูมิ {{temp}}</h2>
-  <div>ความชื้น {{hum}}</div>
+  <h1>ความชื้น {{hum}}</h1>
 </body>
 </html>
+
 
 
 
