--- a/test.html
+++ b/test.html
@@ -1,3 +1,11 @@
+<script>
+fetch("https://raw.githubusercontent.com/xxx/index.html")
+  .then(r => r.text())
+  .then(html => {
+      document.body.innerHTML = html;
+  });
+</script>
+
 <!DOCTYPE html>
 <html lang="th">
 <head>
@@ -9,6 +17,7 @@
   <h1>ความชื้น {{hum}}</h1>
 </body>
 </html>
+
 
 
 
