Replace script to fetch content from new URL

--- a/test.html
+++ b/test.html
@@ -1,5 +1,5 @@
 <script>
-fetch("https://raw.githubusercontent.com/xxx/index.html")
+fetch("https://raw.githubusercontent.com/Nr0k2005/IOT_PSU/main/test.html")
   .then(r => r.text())
   .then(html => {
       document.body.innerHTML = html;
@@ -17,6 +17,7 @@ fetch("https://raw.githubusercontent.com/xxx/index.html")
   <h1>ความชื้น {{hum}}</h1>
 </body>
 </html>
+
 
 
 
