--- a/test.html
+++ b/test.html
@@ -1,4 +1,4 @@
-<script>
+<!-- <script>
 fetch("https://cdn.jsdelivr.net/gh/Nr0k2005/IOT_PSU/test.html")
   .then(r => r.text())
   .then(html => {
@@ -12,9 +12,35 @@ fetch("https://cdn.jsdelivr.net/gh/Nr0k2005/IOT_PSU/test.html")
   <meta charset="UTF-8" />
 </head>
 <body>  
+
+</body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="th">
+<head>
+  <meta charset="UTF-8">
+  <title>Realtime HTML</title>
+</head>
+<body>
+  <div id="content">กำลังโหลด HTML จาก GitHub...</div>
+
+  <script>
+    fetch("https://cdn.jsdelivr.net/gh/Nr0k2005/IOT_PSU/test.html")
+      .then(r => r.text())
+      .then(html => {
+        document.getElementById("content").innerHTML = html;
+      })
+      .catch(err => {
+        document.getElementById("content").innerHTML = "โหลด HTML ไม่สำเร็จ 😢";
+        console.error(err);
+      });
+  </script>
+  
   <h1>ค่าปัจจุบัน</h1>
   <h1>อุณหภูมิ {{temp}}</h1>
   <h1>ความชื้น {{hum}}</h1>
+
 </body>
 </html>
 
