Comment out temperature and humidity display
Commented out the temperature and humidity headers in the HTML.

--- a/test.html
+++ b/test.html
@@ -19,12 +19,13 @@
       });
   </script>
   
-  <h1>ค่าปัจจุบัน</h1>
+  <!-- <h1>ค่าปัจจุบัน</h1>
   <h1>อุณหภูมิ {{temp}}</h1>
-  <h1>ความชื้น {{hum}}</h1>
+  <h1>ความชื้น {{hum}}</h1> -->
 
 </body>
 </html>
+
 
 
 
