Restore HTML structure and script functionality

--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
 <body>
   <div id="content">กำลังโหลด HTML จาก GitHub...</div>
 
-  <!-- <script>
+  <script>
     fetch("https://cdn.jsdelivr.net/gh/Nr0k2005/IOT_PSU/test.html")
       .then(r => r.text())
       .then(html => {
@@ -17,7 +17,7 @@
         document.getElementById("content").innerHTML = "โหลด HTML ไม่สำเร็จ 😢";
         console.error(err);
       });
-  </script> -->
+  </script>
   
   <h1>ค่าปัจจุบัน</h1>
   <h1>อุณหภูมิ {{temp}}</h1>
@@ -25,6 +25,7 @@
 
 </body>
 </html>
+
 
 
 
