Refactor HTML structure and content loading

--- a/test.html
+++ b/test.html
@@ -5,10 +5,12 @@
   <title>Realtime HTML</title>
 </head>
 <body>
-  <div id="content">กำลังโหลด HTML จาก GitHub...</div>
-  <h1>ค่าปัจจุบัน</h1>
-  <h1>อุณหภูมิ {{temp}}</h1>
-  <h1>ความชื้น {{hum}}</h1>
+  <div id="content">
+    กำลังโหลด HTML จาก GitHub...
+    <h1>ค่าปัจจุบัน</h1>
+    <h1>อุณหภูมิ {{temp}}</h1>
+    <h1>ความชื้น {{hum}}</h1>
+  </div>
   
   <script>
     fetch("https://cdn.jsdelivr.net/gh/Nr0k2005/IOT_PSU/test.html")
@@ -26,6 +28,7 @@
 
 </body>
 </html>
+
 
 
 
