Fix HTML structure and add missing content

--- a/test.html
+++ b/test.html
@@ -10,6 +10,7 @@
     <h1>ค่าปัจจุบัน</h1>
     <h6>อุณหภูมิ {{temp}}</h6>
     <h1>ความชื้น {{hum}}</h1>
+    าทสาทสาทสาทสาท
   </div>
   
   <script>
@@ -28,6 +29,7 @@
 
 </body>
 </html>
+
 
 
 
