Refactor test.html to remove loading script
Removed unnecessary loading div and script for fetching HTML.

--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
   <title>Realtime HTML</title>
 </head>
 <body>
-  <div id="content">
+  <!-- <div id="content">
     กำลังโหลด HTML จาก GitHub...
     <h1>ค่าปัจจุบัน</h1>
     <h6>อุณหภูมิ {{temp}}</h6>
@@ -23,12 +23,15 @@
         document.getElementById("content").innerHTML = "โหลด HTML ไม่สำเร็จ 😢";
         console.error(err);
       });
-  </script>
+  </script> -->
   
-
+  <h1>ค่าปัจจุบัน</h1>
+  <h6>อุณหภูมิ {{temp}}</h6>
+  <h1>ความชื้น {{hum}}</h1>
 
 </body>
 </html>
+
 
 
 
